--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "firebase-admin": "^8.6.0",
     "firebase-functions": "^3.3.0",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "uuidv4": "^5.0.1"
   },
   "devDependencies": {
     "eslint": "^5.12.0",
